feat: Add advanced search API (#438)
* feat: add advanced search on entry nodes API

* feat: add pagination on search API

* fix: add text search order in search API

* fix: fix multi-word search

* refactor: enable multi-word whitespaced search

* chore: update Client SDK

* chore: update frontend to support new API

* style: lint backend

* feat: return filters AST in search API call

* refactor: simplify filter search term parsing

* refactor: respond to comments

* chore: regenerate SDK

* style: lint

* docs: add function doc

* fix: reorder search response

* refactor: add parsed query string to search response

* docs: add code docs

* docs: add filter docs
